// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button handles onClick 1`] = `
<body>
  <div>
     
    <button
      class="sc-bdnxRM cOQJuI"
      id="mybutton"
    >
      <span
        class="sc-hKFxyN hHAztA"
        color="white"
        font-size="medium"
      >
        Click Me
      </span>
    </button>
     
  </div>
</body>
`;

exports[`Button renders a default button with text 1`] = `
<body>
  <div>
     
    <button
      class="sc-bdnxRM cOQJuI"
      id="mybutton"
    >
      <span
        class="sc-hKFxyN hHAztA"
        color="white"
        font-size="medium"
      >
        Click me
      </span>
    </button>
     
  </div>
</body>
`;

exports[`Button renders a primary button 1`] = `
<body>
  <div>
     
    <button
      class="sc-bdnxRM cOQJuI"
      id="mybutton"
    >
      <span
        class="sc-hKFxyN hHAztA"
        color="white"
        font-size="medium"
      >
        Click me
      </span>
    </button>
     
  </div>
</body>
`;
